--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 @font-face {
 
-    font-family: "myFont";
-    src: url("assets/fonts/font.otf");
-    }
-
+    font-family: ArchieveRegular;
+    
+    src: url("../assets/fonts/font.otf");
+}
 
 
 html, body {
     height:100%;
     margin: 0px 0px 0px 0px;
+    background-color: #10a1dc;
 }
 
 .homepage-card-title{
@@ -16,6 +17,9 @@ html, body {
     padding-top: 32px;
 }
 
+.custom-footer{
+    background: white;
+}
 
 
 .footer-title{
@@ -52,6 +56,7 @@ html, body {
 }
 
 h1{
-    font-family: "myFont";
+
+    font-family: ArchieveRegular;
 }
 
